Support Numpy (#46)
* Add numpy to dependencies

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Log stacktrace when running into errors

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Fix yaml rest test

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Print python error stack

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Change graal cache to tmp dir

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Specify locale to get rid of forbidden patterns error

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Exclude shared libraries from forbiddenPatterns check

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Simplify error print

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Only include java files in forbidden patterns check

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Disable forbiddenPatterns task

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Print python stacktrace

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Define resourceDirectory

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add a yaml test to create a numpy array (does not work for now)

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Update gradle wrapper to 9.2.0

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Use graalpy.resources in as VFS location for python

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Loss security restrictions & set graalpy resource dir to tmp

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Set cache dir to tmp

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Use virtual file system instead of specified external path for graalpy resources

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* A usable version

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Another working version, with added tests for importing core and std libraries

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Can load numpy once

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Remove forbidden 